feat: xml serde reduction (#1108)
* feat: xml serde reduction

* use regular maps in StringStore

* address review comments

* unused import

* update openBlock to java text block

* update StringStore::assignKey

* set StringStore final, improve readability of writeRequestQueryParam